# lic-dsf-programmatic-extraction

./: .gitignore  README.md  investigate_cells.py  lic_dsf_annotate.py  lic_dsf_config.py  lic_dsf_constraints.py  lic_dsf_export.py  lic_dsf_group_inputs.py  lic_dsf_input_setters.py  lic_dsf_labels.py  lic_dsf_pipeline.py  map_lic_dsf_indicators.py  map_post_load.prof  pyproject.toml
.cursor/rules/: constraint-setting.mdc  general.mdc
.github/workflows/: ci.yml  deploy-packages.yml
docs/: 2025-08-12-macros.md  README.qmd  benchmark.md  python-classes-and-lib-design.html
docs/guidance-note/: design-insights.md  instruction-sheet.md  lic-dsf-course-review.md  lic-dsf-guidance-note-review.md  lic-dsf-reference-enhanced.md
docs/guidance-note/fulltext/: lic-dsf-guidance-note.txt
docs/how-it-works/: how-it-works.md  how_it_works.qmd
docs/pipeline-explainer/: outline.md  pipeline-explainer.html
docs/work-plan-files/: work-plan.md
scripts/: deploy.sh  diagnose_build_graph.py  map_lic_dsf.py  map_lic_dsf_profile.py  pyproject.toml.template  validate_packaging_pyproject.py
src/: README.md.template  lic_dsf_annotate.py  lic_dsf_config.py  lic_dsf_export.py  lic_dsf_group_inputs.py  lic_dsf_input_setters.py  lic_dsf_labels.py  lic_dsf_pipeline.py
src/configs/: __init__.py
tests/: conftest.py  test_benchmark_graph_provenance.py  test_build_graph_compression.py  test_check_constraints_2025_08_12.py  test_codegen_setters_module.py  test_config_2025_c4_market_sheet_alias.py  test_config_2025_constraint_formula_sanity.py  test_config_2025_figure_data_rows.py  test_config_2025_input4_constraints.py  test_config_2025_input5_constraints.py  test_config_2025_input6_constraints.py  test_config_2025_input8_constraints.py  test_config_2025_pv_base_constraints.py  test_config_2025_pv_baseline_com_constraints.py  test_config_2025_pv_lc_nr_constraints.py  test_config_2026_figure_data_rows.py  test_dynamic_ref_gaps_2025_08_12.py  test_entrypoint_naming.py  test_export_constants.py  test_exported_package_setter_smoke.py  test_graph_json_export.py  test_group_inputs_classification.py  test_label_hierarchy.py  test_list_missing_dynamic_ref_leaves.py  test_packaging_templates.py  test_profile_normalize_formula.py  test_split_columns.py  test_tall_year_row_codegen.py  test_year_offset_detection.py  test_year_series_setters.py
(+3 files in other folders)
