[project]
name = "lic-dsf-programmatic-extraction"
version = "0.1.0"
description = "Programmatically extract LIC DSF model from Excel, annotate with economic logic, and export as a Python package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "excel-formula-expander",
    "excel-grapher",
    "llm>=0.28",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
excel-grapher = { git = "https://github.com/Teal-Insights/excel-grapher" }
excel-formula-expander = { git = "https://github.com/Teal-Insights/excel-formula-expander" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
