[project]
name = "lic-dsf-programmatic-extraction"
version = "0.1.0"
description = "Programmatically extract LIC DSF model from Excel, annotate with economic logic, and export as a Python package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "excel-grapher",
    "fastpyxl",
    "llm>=0.28",
    "numpy",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
excel-grapher = { git = "https://github.com/Teal-Insights/excel-grapher" }
fastpyxl = { git = "https://github.com/Promptly-Technologies-LLC/fastpyxl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
markers = [
    "slow: touches the real template workbook or heavy codegen/export (opt-in: pytest -m slow)",
]
# Skip slow tests by default. Run slow only: uv run pytest -m slow
# Run everything: uv run pytest --override-ini="addopts="  (or -m "slow or not slow")
addopts = ["-m", "not slow"]
